--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
 
         <section>
-            <img id="cloudImage" src="img/cloud1.jpg" alt="Imagem de computação em nuvem">
+            <img id="cloudImage" src="img/cloud3.png" alt="Imagem de computação em nuvem">
         </section>
 
         <section class="borda" id="em-nuvem">
